1. 实现文章修改（继续编辑）和删除文章的功能 2. 做了文章阅读量统计

--- a/src/main/resources/static/css/blog_list.css
+++ b/src/main/resources/static/css/blog_list.css
@@ -7,10 +7,10 @@
 /* 博客的标题 */
 .blog .title {
     color: black;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 700;
-    text-align: center;
     padding: 10px 0;
+    float: left;
 }
 
 /* 博客的摘要 */
@@ -22,29 +22,20 @@
 
 /* 博客的日期 */
 .blog .date {
-    color: #008000;
+    color: #666666;
     margin-top: 10px;
-    text-align: center;
+    float: right;
 }
 
 /* 查看详情 按钮 */
 .blog .detail {
-    display: block;
-    width: 120px;
-    height: 40px;
-    line-height: 40px;
-    color: black;
-    text-align: center;
+    font-size: 15px;
     text-decoration: none;
-    margin: 10px auto 0 auto;
-    border: 2px solid black;
-
-    /* 给颜色加上过渡效果 */
-    transition: all 0.3s;
+    color: #333;
+    float: right;
 }
 
 /* 查看详情按钮的鼠标 hover 效果 */
 .blog .detail:hover {
-    background-color: #000;
-    color: #fff;
+    color: #9c3328;
 }
